Fix security config for Render